<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout                                  xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
                                                 android:paddingBottom="@dimen/layout_padding"
                                                 android:paddingLeft="@dimen/layout_padding"
                                                 android:paddingRight="@dimen/layout_padding"
                                                 android:paddingTop="@dimen/layout_padding"
                                                 android:id="@+id/relative"
                                                 tools:context=".activities.HomeActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_new_button"
        android:layout_width="@dimen/fab_length"
        android:layout_height="@dimen/fab_width"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        android:layout_marginEnd="@dimen/fab_margin_end"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/colorAccent"/>

</RelativeLayout>